# fractsim

./: CMakeLists.txt  README.md  main.cpp
CMakeModules/: FindGMP.cmake
data/: debug.sh  run.sh  valgrind.sh
src/: CMakeLists.txt  ColorPalette.cc  ColorPalette.hh  ColorPalette.hxx  Fractal.cc  Fractal.hh  Fractal.hxx  FractalOptions.hh  FractalOptions.hxx  FractalRenderer.cc  FractalRenderer.hh  FractalRenderer.hxx  GMPBox.cc  GMPBox.hh  GMPBox.hxx  GMPVector2.cc  GMPVector2.hh  GMPVector2.hxx  JuliaOptions.cc  JuliaOptions.hh  JuliaOptions.hxx  JuliaRenderingOptions.hh  JuliaRenderingOptions.hxx  MandelbrotOptions.cc  MandelbrotOptions.hh  MandelbrotOptions.hxx  MandelbrotRenderingOptions.hh  MandelbrotRenderingOptions.hxx  NewtonOptions.cc  NewtonOptions.hh  NewtonOptions.hxx  NewtonRenderingOptions.cc  NewtonRenderingOptions.hh  NewtonRenderingOptions.hxx  OptionsPanel.hh  OptionsPanel.hxx  RenderingOptions.cc  RenderingOptions.hh  RenderingOptions.hxx  RenderingScheduler.cc  (+11 more)
